[workspace]

members = [
    "guessing_game",
    "hello_cargo",
    "hello_world",
    "variables",
    "branches",
    "ownership",
    "structs",
    "rectangles",
    "methods",
    "match_control_flow",
    "vectors",
    "strings",
    "hash_maps",
    "generic_function",
    "generics",
    "traits",
    "lifetimes",
    "adder"
]
