[workspace]

members = [
    "guessing_game",
    "hello_cargo",
    "hello_world",
    "variables",
    "branches",
    "ownership",
    "structs",
    "rectangles",
    "methods",
    "match_control_flow",
    "vectors",
    "strings",
    "hash_maps",
    "generic_function",
    "generics",
    "traits",
    "lifetimes",
    "adder",
    "minigrep",
    "closures",
    "iterators",
    "crates",
    "cons",
    "deref",
    "destructor",
    "rc",
    "refcell",
    "ref_cycles",
    "threads",
    "mpsc",
    "shared_concurrency"
]
