[workspace]

members = [
    "guessing_game",
    "hello_cargo",
    "hello_world",
    "variables",
    "branches",
    "ownership",
    "structs",
    "rectangles",
    "methods",
    "match_control_flow",
    "vectors",
    "strings",
    "hash_maps",
    "generic_function",
    "generics",
    "traits",
    "lifetimes",
    "adder",
    "minigrep",
    "closures",
    "iterators",
    "crates",
    "cons",
    "deref",
    "destructor",
    "rc",
    "refcell",
    "ref_cycles",
    "threads",
    "mpsc",
    "shared_concurrency",
    "object_oriented",
    "trait_objects",
    "state_machine",
    "patterns",
    "pattern_syntax",
    "unsafe_rust",
    "advanced_lifetimes",
    "advanced_traits",
    "advanced_types",
    "advanced_functions_and_closures",
    "macros",
    "single_thread_web_server"
]
